background image stretching fixed; menu hides after clicking on a category implementation

--- a/src/components/Jumbotron/Jumbotron.css
+++ b/src/components/Jumbotron/Jumbotron.css
@@ -1,5 +1,5 @@
 .jumbotron {
-  background-image: url("../../assets/img/jumbo-bg.jpg");
+  background: url("../../assets/img/jumbo-bg.jpg") no-repeat center center fixed;
   background-size: cover;
   min-height: 650px;
   width: 100%;
